--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">机场安防</string>
+    <string name="app_name">围界安防</string>
     <string name="account">请输入账号</string>
     <string name="password">请输入密码</string>
     <string name="check_password">记住密码</string>
