--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="check_password">记住密码</string>
     <string name="check_login">自动登录</string>
     <string name="login">登  录</string>
+    <string name="loading">正在加载中</string>
     <string name="nowrecord">当前记录</string>
     <string name="solve">警报处理</string>
     <string name="recordtime">警报时间</string>
