--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,4 +51,5 @@
     <string name="personid">员工编号</string>
     <string name="areadefense">区域/防区</string>
     <string name="certificationdevice">认证设备</string>
+    <string name="confrimpassword">确认密码</string>
 </resources>
