报警记录的获取
处理状态这个细节待改

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,4 +52,5 @@
     <string name="areadefense">区域/防区</string>
     <string name="certificationdevice">认证设备</string>
     <string name="confrimpassword">确认密码</string>
+    <string name="operaterecord">账户操作记录</string>
 </resources>
